--- a/Plot.ipynb
+++ b/Plot.ipynb
@@ -1,6 +1,50 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17777d37-57fc-4886-a5f5-42311f2374e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bda8e04-6e53-4cd8-86c8-e699b92825b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 10, 30)\n",
+    "y = np.sin(x)\n",
+    "\n",
+    "plt.plot(x, y, 'o', color='black');"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "venv"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
